--- a/README.html
+++ b/README.html
@@ -9,10 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Kennedy Nguyen" />
 
 
-<title>A4 Incarceration Report</title>
+<title>README</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,61 +348,43 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">A4 Incarceration Report</h1>
-<h4 class="author">Kennedy Nguyen</h4>
-<h4 class="date">2024-5-25</h4>
 
 </div>
 
 
-<div id="abstract" class="section level2">
-<h2>Abstract</h2>
-<p>This report looks to investigate the trends in incarceration rates,
-with a main focus on race and gender in the United States. Data
-collected by the <em>Vera Institute</em> will be used to explore the
-disproportionate numbers of specific demographics within the
-incarcerated population. This report hopes to take a closer look at mass
-incarceration in our communities.</p>
+<div id="assignment-4-incarceration" class="section level1">
+<h1>Assignment 4: Incarceration</h1>
+<p>In this assignment, you’ll create the necessary files to perform the
+analysis described on Canvas (including <code>analysis.R</code>,
+<code>index.Rmd</code>, and by <em>knitting</em> your document, an
+<code>index.html</code> file).</p>
+<p><strong>Important</strong>: Be sure to publish your site prior to the
+assignment due date, to test that your webserver is working
+correctly.</p>
+<div id="notes" class="section level3">
+<h3>Notes</h3>
+<div id="file-organization" class="section level4">
+<h4>File organization</h4>
+<ul>
+<li>The <code>analysis.R</code> file and, if needed, other data analysis
+or visualization files should be placed in your <code>/source</code>
+directory.</li>
+<li>The <code>index.Rmd</code> and, if needed, other <code>.Rmd</code>
+and <code>.HTML</code> files should go into the <code>/docs</code></li>
+<li>With this code organization, you should set your working directory
+to be in <code>/docs</code></li>
+<li>As you develop your report, you should publish it on your webserver
+to make sure it displays correctly #### Webserver set-up</li>
+<li>Be sure to <strong>change your repository settings</strong> so that
+you can view the hosted website, which will be available at: &gt; <a href="https://ORGANIZATION_NAME.github.io/REPO_NAME" class="uri">https://ORGANIZATION_NAME.github.io/REPO_NAME</a> <a href="https://113808455.github.io/a4-incarceration" class="uri">https://113808455.github.io/a4-incarceration</a> &gt;
+&gt;where ORGANIZATION_NAME is your GitHub User ID and REPO_NAME is the
+name of the assignment (e.g., <code>a3-dghendry</code>)</li>
+<li>Go to the “pages” page (via the “settings” tab) to configure your
+webserver to published your reports from the <code>/docs</code>
+directory</li>
+</ul>
 </div>
-<div id="introduction" class="section level2">
-<h2>Introduction</h2>
-<p>In this report, the variables that I am choosing to analyze are race
-and sex and if there are any trends to be found between these variables.
-I am choosing these two variables because I am genuinely curious about
-what my findings will be, I have a general prediction of what will be
-shown from the data but I hope to be wrong.</p>
-<p>In my my first graph, I found that Black Americans were making up the
-majority of the jailed population in Louissiana at nearly 0.0100 from
-2009 to 2012. This does make sense considering that Louissiana has the
-second highest percentage of African Americans in the United States with
-32.8% of the state being of African American heritage.</p>
-<p>The data set is collected and maintained by the <em>Vera
-Institute</em>, they aim to find ways to end mass incarceration which
-destroys and rips apart communities and families across the US. A
-limitation that may be a concern for this data set are that it is not
-fully up to date, as of my report, the data set only covers up to 2018.
-Another limitation is that the numbers may not be fully accurate due to
-<em>Vera</em> having to make estimations because of information releases
-being staggered or untimely as stated on their website <em>“Vera
-researchers have produced estimates for state, urbanicity, and national
-jail populations in recent years.”</em> Furthermore, another possible
-flaw in this dataset is that because this dataset takes in everything
-from rural jails to massive urban ones, standards of information
-colleciton may differ from jail to jail which could possibly give us
-some inaccuracies in the data and skew or cause our information to have
-bias.</p>
 </div>
-<div id="data-summary" class="section level2">
-<h2>Data Summary</h2>
-<p>In the first graph showcasing the rate of different ethnicities in
-the jailed population within the US, we can see that in some states,
-Black Americans make up a large amount of the populations in jail. This
-is much higher than any of the other ethnicities on this graph. African
-Americans are being arrested at disproportionately higher rates than any
-other group. I am not sure why the pre-1985 data is presented like this,
-but we can see that once the data collection ramps up, African Americans
-start making up a big portion of the jailed US population. The
-percentage of the jailed population peaks at around 2009 and 2010.</p>
 </div>
 
 
